[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://gameplay/minigames/mock/mock_minigame.gd" id="1_mock"]

[node name="MockMiniGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mock")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mock Minigame"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Painting: ???
Difficulty: ?"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="WinButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.3, 1)
text = "WIN"

[node name="LoseButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
text = "LOSE"

[node name="CancelButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "CANCEL"

[connection signal="pressed" from="Panel/VBox/WinButton" to="." method="_on_win_pressed"]
[connection signal="pressed" from="Panel/VBox/LoseButton" to="." method="_on_lose_pressed"]
[connection signal="pressed" from="Panel/VBox/CancelButton" to="." method="_on_cancel_pressed"]
